# Listen-it

./: .gitignore  fomp.py  pyproject.toml
src/daily_audio/: cli.py  daemon.py  ollama_realtime.py  output.py  realtime.py  recorder.py  transcriber.py  vosk_realtime.py
